--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,16 @@ main {
     align-items: center;
 }
 
+.pattern-desktop {
+    width: 100%;
+    position: absolute;
+    z-index: -1;
+}
+
+.pattern-mobile {
+    display: none;
+}
+
 .card {
     box-sizing: inherit;
     background-color: var(--white);
@@ -50,28 +60,6 @@ main {
 
 .content {
     padding: 1rem 3rem 3rem;
-}
-
-@media only screen and (max-width: 376px) {
-    .card {
-        margin: 2rem;
-    }
-
-    .content {
-        padding: 0 1.5rem 1.5rem;
-    }
-
-    .content h1 {
-        font-size: 22px;
-    }
-
-    .selected-plan {
-        padding: 1rem;
-    }
-
-    .plan-icon {
-        margin-right: 1rem;
-    }
 }
 
 .content h1 {
@@ -155,9 +143,48 @@ main {
     box-shadow: 0px 10px 32px -16px hsl(224, 23%, 55%);
 }
 
+@media only screen and (max-width: 376px) {
+    .pattern-desktop {
+        display: none;
+    }
+    
+    .pattern-mobile {
+        display: block;
+        width: 100%;
+        position: absolute;
+        z-index: -1;
+    }
+
+    .card {
+        margin: 2rem;
+    }
+
+    .content {
+        padding: 0 1.5rem 1.5rem;
+    }
+
+    .content h1 {
+        font-size: 22px;
+    }
+
+    .selected-plan {
+        padding: 1rem;
+    }
+
+    .plan-icon {
+        margin-right: 1rem;
+    }
+}
+
 footer {
     height: 5vh;
 }
 
-.attribution { font-size: 11px; text-align: center; }
-.attribution a { color: var(--bright-blue); }
+.attribution { 
+    font-size: 11px; 
+    text-align: center; 
+}
+
+.attribution a { 
+    color: var(--bright-blue); 
+}
